# cgames

./: .gitignore  Changelog  Makefile  README  configure  configure.in
cblocks/: Makefile  Makefile.in  README  answers.c  answers.h  cblocks.6  cblocks.c  cblocks.h  cursesio.c  dirio.c  dirio.h  fileread.c  fileread.h  gen.h  linuxio.c  movelist.c  movelist.h  parse.c  parse.h  play.c  play.h  userio.h
cblocks/series/: Classics.txt
cmines/: Makefile  Makefile.in  README  cmines.6  cmines.c  cmines.h  cursesio.c  linuxio.c  userio.c  userio.h
csokoban/: Makefile  Makefile.in  README  answers.c  csokoban.6  csokoban.c  csokoban.h  cursesio.c  dirio.c  dirio.h  fileread.c  fileread.h  linuxio.c  movelist.c  movelist.h  play.c  play.h  userio.h
csokoban/series/: Original.txt  Xsokoban.txt  still-more.txt  yoshio-murase.txt
movieguess/: moviegame.c
